<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    tools:context=".makeen.presentation.view.activity.SliderActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/tajawal_regular"
        android:lineSpacingExtra="10dp"
        android:textAlignment="center"
        android:text="تلفريك - هو التطبيق الأفضل للمقارنة بين وسائل المواصلات المختلفة واختيار أفضل سعر وجودة لجميع وسائل المواصلات التي تريدها إلكترونيا دون تعب"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/worm_dots_indicator"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:dotsColor="@color/white"
        app:dotsStrokeColor="@color/white"
        app:dotsCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_data"
        app:dotsSize="16dp"
        app:dotsSpacing="5dp"
        app:dotsStrokeWidth="2dp"
        />


    <TextView
        android:visibility="gone"
        android:id="@+id/next_btn"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"

        android:text="@string/next"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="18sp"
        android:background="@drawable/next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/skip"
        android:visibility="gone"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/skip"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:background="@drawable/next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/next_finish"
        android:layout_marginBottom="30dp"
        android:text="@string/finish"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="18sp"
        android:background="@drawable/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>